--- a/ch3_newswire_multiclass.ipynb
+++ b/ch3_newswire_multiclass.ipynb
@@ -239,6 +239,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "talented-medicine",
+   "metadata": {},
+   "source": [
+    "## Batch Size\n",
+    "\n",
+    "Batch size is the number of samples to be processed simultaneously for the model.\n",
+    "\n",
+    "The number of samples should be base-2, and is usually between 8-128."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "shaped-bloom",
